--- a/index.html
+++ b/index.html
@@ -756,7 +756,7 @@
             </div>
           </div> -->
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-data">
+          <div class="col-lg-3 col-md-6 portfolio-item filter-data">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/project-vix/vix-kalbe.png" class="img-fluid" alt="">
               <div class=" portfolio-info">
@@ -771,7 +771,7 @@
           </div>
 
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-vix filter-data">
+          <div class="col-lg-3 col-md-6 portfolio-item filter-vix filter-data">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/project-vix/vix-hci.png" class="img-fluid" alt="">
               <div class=" portfolio-info">
@@ -788,7 +788,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-vix filter-data">
+          <div class="col-lg-3 col-md-6 portfolio-item filter-vix filter-data">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/project-vix/vix-bmi.png" class="img-fluid" alt="">
               <div class=" portfolio-info">
@@ -801,7 +801,21 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-data">
+          <div class="col-lg-3 col-md-6 portfolio-item filter-data">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/datacamp/Real-time Insights from Social Media Data.png" class="img-fluid" alt="">
+              <div class=" portfolio-info">
+                <p>Real-time Insights from Social Media Data</p>
+                <div class="portfolio-links">
+                  <a href="https://maulanakavaldo.github.io/DataCamp/Real-time Insights from Social Media Data/Real-time Insights from Social Media Data.html"
+                    target="_blank" class="portfolio-details-lightbox" data-glightbox="type: external"
+                    title="Show Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6 portfolio-item filter-data">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/datacamp/Exploring 67 years of LEGO.png" class="img-fluid" alt="">
               <div class=" portfolio-info">
@@ -815,7 +829,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-data">
+          <div class="col-lg-3 col-md-6 portfolio-item filter-data">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/datacamp/The Android App Market on Google Play.png" class="img-fluid"
                 alt="">
@@ -830,7 +844,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-data">
+          <div class="col-lg-3 col-md-6 portfolio-item filter-data">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/datacamp/Investigating Netflix Movies and Guest Stars in The Office.png"
                 class="img-fluid" alt="">
@@ -845,7 +859,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-data">
+          <div class="col-lg-3 col-md-6 portfolio-item filter-data">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/datacamp/A Visual History of Nobel Prize Winners.png" class="img-fluid"
                 alt="">
@@ -860,7 +874,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-ml filter-data">
+          <div class="col-lg-3 col-md-6 portfolio-item filter-ml filter-data">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/datacamp/Dr. Semmelweis and the Discovery of Handwashing.png"
                 class="img-fluid" alt="">
@@ -875,7 +889,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-ml filter-data">
+          <div class="col-lg-3 col-md-6 portfolio-item filter-ml filter-data">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/project-bike-sharing/bike-sharing.png" class="img-fluid" alt="">
               <div class=" portfolio-info">
@@ -888,7 +902,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-ml filter-data">
+          <div class="col-lg-3 col-md-6 portfolio-item filter-ml filter-data">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/project-rock-paper-scrissor/rock_paper_scrissor.png" class="img-fluid"
                 alt="">
@@ -902,7 +916,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-data">
+          <div class="col-lg-3 col-md-6 portfolio-item filter-data">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/tableau.png" class="img-fluid" alt="">
               <div class=" portfolio-info">
@@ -915,7 +929,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-cloud">
+          <div class="col-lg-3 col-md-6 portfolio-item filter-cloud">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/aws-staticw/slide-1.png" class="img-fluid" alt="">
               <div class=" portfolio-info">
@@ -928,7 +942,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-team filter-data">
+          <div class="col-lg-3 col-md-6 portfolio-item filter-team filter-data">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/thk/slide-0.png" class="img-fluid" alt="">
               <div class=" portfolio-info">
@@ -942,7 +956,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-ml filter-data">
+          <div class="col-lg-3 col-md-6 portfolio-item filter-ml filter-data">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/churn-prediction/slide-0.png" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -956,7 +970,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="col-lg-3 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/web-system-recommendation/slide-0.png" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -969,7 +983,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="col-lg-3 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/web-practical-work/slide-0.png" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -982,7 +996,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-java">
+          <div class="col-lg-3 col-md-6 portfolio-item filter-java">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/java-movie-ticketing/slide-0.png" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -995,7 +1009,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-java">
+          <div class="col-lg-3 col-md-6 portfolio-item filter-java">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/java-library/slide-0.png" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -1009,7 +1023,7 @@
           </div>
 
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-android">
+          <div class="col-lg-3 col-md-6 portfolio-item filter-android">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/android-list-view/slide-0.png" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -1022,7 +1036,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-android">
+          <div class="col-lg-3 col-md-6 portfolio-item filter-android">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/android-book/slide-0.png" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -1035,7 +1049,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-android">
+          <div class="col-lg-3 col-md-6 portfolio-item filter-android">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/android-room-persistance/slide-0.png" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -1048,7 +1062,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-data filter-python filter-ml">
+          <div class="col-lg-3 col-md-6 portfolio-item filter-data filter-python filter-ml">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/project-customers-churn/customers-churn.png" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -1061,7 +1075,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-data filter-python filter-ml">
+          <div class="col-lg-3 col-md-6 portfolio-item filter-data filter-python filter-ml">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/project-emotion-recognition/emotion-recognition.png" class="img-fluid"
                 alt="">
@@ -1076,7 +1090,7 @@
           </div>
 
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-data filter-python filter-ml">
+          <div class="col-lg-3 col-md-6 portfolio-item filter-data filter-python filter-ml">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/project-european-hotel/european-hotel.png" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -1089,7 +1103,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-data filter-python filter-ml">
+          <div class="col-lg-3 col-md-6 portfolio-item filter-data filter-python filter-ml">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/dataanalyst-food-sales/food-sales.png" class="img-fluid" alt="">
               <div class="portfolio-info">
