--- a/index.html
+++ b/index.html
@@ -805,7 +805,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/datacamp/Real-time Insights from Social Media Data.png" class="img-fluid" alt="">
               <div class=" portfolio-info">
-                <p>Real-time Insights from Social Media Data</p>
+                <h4>Real-time Insights from Social Media Data</h4>
                 <div class="portfolio-links">
                   <a href="https://maulanakavaldo.github.io/DataCamp/Real-time Insights from Social Media Data/Real-time Insights from Social Media Data.html"
                     target="_blank" class="portfolio-details-lightbox" data-glightbox="type: external"
