--- a/index.html
+++ b/index.html
@@ -770,6 +770,20 @@
             </div>
           </div>
 
+          <div class="col-lg-3 col-md-6 portfolio-item filter-data">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/banjir-jakarta/banjir-jakarta.png" class="img-fluid" alt="">
+              <div class=" portfolio-info">
+                <!-- <h4></h4> -->
+                <div class="portfolio-links">
+                  <a href="pages/project-banjir-jakarta.html"
+                    target="_blank" class="portfolio-details-lightbox" data-glightbox="type: external"
+                    title="Show Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
 
           <div class="col-lg-3 col-md-6 portfolio-item filter-vix filter-data">
             <div class="portfolio-wrap">
@@ -803,7 +817,8 @@
 
           <div class="col-lg-3 col-md-6 portfolio-item filter-data">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/datacamp/Real-time Insights from Social Media Data.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/datacamp/Real-time Insights from Social Media Data.png" class="img-fluid"
+                alt="">
               <div class=" portfolio-info">
                 <h4>Real-time Insights from Social Media Data</h4>
                 <div class="portfolio-links">
