--- a/pages/project-banjir-jakarta.html
+++ b/pages/project-banjir-jakarta.html
@@ -39,27 +39,14 @@
 </head>
 
 <body>
-  <main id="main">
-    <!-- ======= Portfolio Details Section ======= -->
-    <!-- <section id="portfolio-details" class="portfolio-details"> -->
-    <!-- <div class="container"> -->
 
-    <!-- <div class=""> -->
-      <!-- <div class="portfolio-info"> -->
-        <iframe
-          src="https://banjir-jakarta-6godbsa.gamma.site/"
-          frameborder="0" style="width: 100%; height: 1000px;"></iframe>
-        <br><hr><br>
-        <iframe
-          src="https://maulanakavaldo.github.io/JSC-Data-Science-Trainee/"
-          frameborder="0" style="width: 100%; height: 1000px;"></iframe>
-      <!-- </div> -->
-    <!-- </div> -->
-    <!-- </div> -->
-    <!-- </section> -->
-    <!-- End Portfolio Details Section -->
-  </main>
-  <!-- End #main -->
+  <iframe src="https://banjir-jakarta-6godbsa.gamma.site/" frameborder="0"
+    style="width: 100%; height: 1000px;"></iframe>
+  <br>
+  <hr><br>
+  <iframe src="https://maulanakavaldo.github.io/JSC-Data-Science-Trainee/" frameborder="0"
+    style="width: 100%; height: 1000px;"></iframe>
+
 
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
       class="bi bi-arrow-up-short"></i></a>
