--- a/pages/gallery-coursera-aws-saa.html
+++ b/pages/gallery-coursera-aws-saa.html
@@ -16,7 +16,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Maulana Kavaldo - Google Certificates</title>
+  <title>Maulana Kavaldo - AWS Certificates</title>
   <meta content="Im Maulana Kavaldo, junior data scientist/analyst with more 2 years learning experience."
     name="description">
   <meta content="Maulana Kavaldo Google Project Management Certificates" name="keywords">
@@ -74,29 +74,81 @@
     <div class="container" data-aos="fade-up">
 
       <div class="section-title">
-        <h2></h2>
-        <!-- <p>Learning Path:</p> -->
+        <h2>
+          <a href="https://coursera.org/verify/professional-cert/T75AL7GC2NHB" target="_blank">
+            AWS Cloud Solutions Architect
+          </a>
+        </h2>
       </div>
-
-      <!-- <div class="row">
-          <div class="col-lg-12 d-flex justify-content-center" data-aos="fade-up" data-aos-delay="100">
-            <ul id="portfolio-flters">
-              <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-gpm">Google</li>
-            </ul>
-          </div>
-        </div> -->
 
       <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
 
-        <div class="col-lg-3 col-md-6 portfolio-item filter-gpm">
+        <div class="col-lg-3 col-md-6 portfolio-item filter-aws-saa">
           <div class="portfolio-wrap">
-            <img src="../assets/img/certif_licen/coursera/" class="img-fluid" alt="">
+            <img src="../assets/img/certif_licen/coursera/aws-saa/AWS Cloud Solutions Architect.png" class="img-fluid"
+              alt="">
             <div class="portfolio-info">
-              <p></p>
+              <p>AWS Cloud Solutions Architect</p>
               <div class="portfolio-links">
-                <a href="../assets/img/certif_licen/coursera/" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+                <a href="../assets/img/certif_licen/coursera/aws-saa/AWS Cloud Solutions Architect.png"
+                  data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-md-6 portfolio-item filter-aws-saa">
+          <div class="portfolio-wrap">
+            <img src="../assets/img/certif_licen/coursera/aws-saa/1 AWS Cloud Technical Essentials.png"
+              class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <p>AWS Cloud Technical Essentials</p>
+              <div class="portfolio-links">
+                <a href="../assets/img/certif_licen/coursera/aws-saa/1 AWS Cloud Technical Essentials.png"
+                  data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-md-6 portfolio-item filter-aws-saa">
+          <div class="portfolio-wrap">
+            <img src="../assets/img/certif_licen/coursera/aws-saa/2 Architecting Solutions on AWS.png" class="img-fluid"
+              alt="">
+            <div class="portfolio-info">
+              <p>Architecting Solutions on AWS</p>
+              <div class="portfolio-links">
+                <a href="../assets/img/certif_licen/coursera/aws-saa/2 Architecting Solutions on AWS.png"
+                  data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-md-6 portfolio-item filter-aws-saa">
+          <div class="portfolio-wrap">
+            <img src="../assets/img/certif_licen/coursera/aws-saa/3 Introduction to Designing Data Lakes on AWS.png"
+              class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <p>Introduction to Designing Data Lakes on AWS</p>
+              <div class="portfolio-links">
+                <a href="../assets/img/certif_licen/coursera/aws-saa/3 Introduction to Designing Data Lakes on AWS.png"
+                  data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-md-6 portfolio-item filter-aws-saa">
+          <div class="portfolio-wrap">
+            <img
+              src="../assets/img/certif_licen/coursera/aws-saa/4 Exam Prep AWS Certified Solutions Architect - Associate.png"
+              class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <p>Exam Prep AWS Certified Solutions Architect - Associate</p>
+              <div class="portfolio-links">
+                <a href="../assets/img/certif_licen/coursera/aws-saa/4 Exam Prep AWS Certified Solutions Architect - Associate.png"
+                  data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
               </div>
             </div>
           </div>
