--- a/pages/gallery-coursera-gada.html
+++ b/pages/gallery-coursera-gada.html
@@ -17,9 +17,9 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Maulana Kavaldo - Google Certificates</title>
-  <meta content="Im Maulana Kavaldo, junior data scientist/analyst with more 2 years learning experience."
+  <meta content="Maulana Kavaldo Google Advance Data Analytics"
     name="description">
-  <meta content="Maulana Kavaldo Google Certificates" name="keywords">
+  <meta content="Maulana Kavaldo Google Advance Data Analytics" name="keywords">
   <meta name="google-site-verification" content="SLhPwvXl2bw4QQGgEcSCxpZ04cM31-AURBADXqZps5Y" />
 
   <!-- Favicons -->
@@ -75,124 +75,118 @@
 
       <div class="section-title">
         <h2>
-          <a href="https://coursera.org/verify/professional-cert/LVVAF9BFNHA7" target="_blank">
-            Google Data Analytics
+          <a href="" target="_blank">
+            Google Advanced Data Analytics
           </a>
         </h2>
       </div>
 
       <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
 
-        <div class="col-lg-3 col-md-6 portfolio-item filter-gda">
+        <div class="col-lg-3 col-md-6 portfolio-item filter-gada">
           <div class="portfolio-wrap">
-            <img src="../assets/img/certif_licen/coursera/gda/Google Data Analytics.png" class="img-fluid" alt="">
+            <img src="../assets/img/certif_licen/coursera/gada/1 Foundations of Data Science.png" class="img-fluid"
+              alt="">
             <div class="portfolio-info">
-              <p></p>
+              <p>Foundations of Data Science</p>
               <div class="portfolio-links">
-                <a href="../assets/img/certif_licen/coursera/gda/Google Data Analytics.png"
+                <a href="../assets/img/certif_licen/coursera/gada/1 Foundations of Data Science.png"
                   data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
               </div>
             </div>
           </div>
         </div>
 
-        <div class="col-lg-3 col-md-6 portfolio-item filter-gda">
+        <div class="col-lg-3 col-md-6 portfolio-item filter-gada">
           <div class="portfolio-wrap">
-            <img src="../assets/img/certif_licen/coursera/gda/1 Foundations Data, Data, Everywhere.png"
-              class="img-fluid" alt="">
+            <img src="../assets/img/certif_licen/coursera/gada/2 Get Started with Python.png" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <p>Foundations Data, Data, Everywhere</p>
+              <p>Get Started with Python</p>
               <div class="portfolio-links">
-                <a href="../assets/img/certif_licen/coursera/gda/1 Foundations Data, Data, Everywhere.png"
+                <a href="../assets/img/certif_licen/coursera/gada/2 Get Started with Python.png"
                   data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
               </div>
             </div>
           </div>
         </div>
 
-        <div class="col-lg-3 col-md-6 portfolio-item filter-gda">
+        <!-- <div class="col-lg-3 col-md-6 portfolio-item filter-gada">
           <div class="portfolio-wrap">
-            <img src="../assets/img/certif_licen/coursera/gda/2 Ask Questions to Make Data-Driven Decisions.png"
-              class="img-fluid" alt="">
+            <img src="../assets/img/certif_licen/coursera/gda/2 Ask Questions to Make Data-Driven Decisions.png" class="img-fluid" alt="">
             <div class="portfolio-info">
               <p>Ask Questions to Make Data-Driven Decisions</p>
               <div class="portfolio-links">
-                <a href="../assets/img/certif_licen/coursera/gda/2 Ask Questions to Make Data-Driven Decisions.png"
-                  data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+                <a href="../assets/img/certif_licen/coursera/gda/2 Ask Questions to Make Data-Driven Decisions.png" data-gallery="portfolioGallery"
+                  class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
               </div>
             </div>
           </div>
         </div>
 
-        <div class="col-lg-3 col-md-6 portfolio-item filter-gda">
+        <div class="col-lg-3 col-md-6 portfolio-item filter-gada">
           <div class="portfolio-wrap">
-            <img src="../assets/img/certif_licen/coursera/gda/3 Prepare Data for Exploration.png" class="img-fluid"
-              alt="">
+            <img src="../assets/img/certif_licen/coursera/gda/3 Prepare Data for Exploration.png" class="img-fluid" alt="">
             <div class="portfolio-info">
               <p>Prepare Data for Exploration</p>
               <div class="portfolio-links">
-                <a href="../assets/img/certif_licen/coursera/gda/3 Prepare Data for Exploration.png"
-                  data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+                <a href="../assets/img/certif_licen/coursera/gda/3 Prepare Data for Exploration.png" data-gallery="portfolioGallery"
+                  class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
               </div>
             </div>
           </div>
         </div>
 
-        <div class="col-lg-3 col-md-6 portfolio-item filter-gda">
+        <div class="col-lg-3 col-md-6 portfolio-item filter-gada">
           <div class="portfolio-wrap">
-            <img src="../assets/img/certif_licen/coursera/gda/4 Process Data from Dirty to Clean.png" class="img-fluid"
-              alt="">
+            <img src="../assets/img/certif_licen/coursera/gda/4 Process Data from Dirty to Clean.png" class="img-fluid" alt="">
             <div class="portfolio-info">
               <p>Process Data from Dirty to Clean</p>
               <div class="portfolio-links">
-                <a href="../assets/img/certif_licen/coursera/gda/4 Process Data from Dirty to Clean.png"
-                  data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+                <a href="../assets/img/certif_licen/coursera/gda/4 Process Data from Dirty to Clean.png" data-gallery="portfolioGallery"
+                  class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
               </div>
             </div>
           </div>
         </div>
 
-        <div class="col-lg-3 col-md-6 portfolio-item filter-gda">
+        <div class="col-lg-3 col-md-6 portfolio-item filter-gada">
           <div class="portfolio-wrap">
-            <img src="../assets/img/certif_licen/coursera/gda/5 Analyze Data to Answer Questions.png" class="img-fluid"
-              alt="">
+            <img src="../assets/img/certif_licen/coursera/gda/5 Analyze Data to Answer Questions.png" class="img-fluid" alt="">
             <div class="portfolio-info">
               <p>Analyze Data to Answer Questions</p>
               <div class="portfolio-links">
-                <a href="../assets/img/certif_licen/coursera/gda/5 Analyze Data to Answer Questions.png"
-                  data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+                <a href="../assets/img/certif_licen/coursera/gda/5 Analyze Data to Answer Questions.png" data-gallery="portfolioGallery"
+                  class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
               </div>
             </div>
           </div>
         </div>
 
-        <div class="col-lg-3 col-md-6 portfolio-item filter-gda">
+        <div class="col-lg-3 col-md-6 portfolio-item filter-gada">
           <div class="portfolio-wrap">
-            <img src="../assets/img/certif_licen/coursera/gda/6 Share Data Through the Art of Visualization.png"
-              class="img-fluid" alt="">
+            <img src="../assets/img/certif_licen/coursera/gda/6 Share Data Through the Art of Visualization.png" class="img-fluid" alt="">
             <div class="portfolio-info">
               <p>Share Data Through the Art of Visualization</p>
               <div class="portfolio-links">
-                <a href="../assets/img/certif_licen/coursera/gda/6 Share Data Through the Art of Visualization.png"
-                  data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+                <a href="../assets/img/certif_licen/coursera/gda/6 Share Data Through the Art of Visualization.png" data-gallery="portfolioGallery"
+                  class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
               </div>
             </div>
           </div>
         </div>
 
-        <div class="col-lg-3 col-md-6 portfolio-item filter-gda">
+        <div class="col-lg-3 col-md-6 portfolio-item filter-gada">
           <div class="portfolio-wrap">
-            <img src="../assets/img/certif_licen/coursera/gda/7 Data Analysis with R Programming.png" class="img-fluid"
-              alt="">
+            <img src="../assets/img/certif_licen/coursera/gda/7 Data Analysis with R Programming.png" class="img-fluid" alt="">
             <div class="portfolio-info">
               <p></p>
               <div class="portfolio-links">
-                <a href="../assets/img/certif_licen/coursera/gda/7 Data Analysis with R Programming.png"
-                  data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+                <a href="../assets/img/certif_licen/coursera/gda/7 Data Analysis with R Programming.png" data-gallery="portfolioGallery"
+                  class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
 
       </div>
     </div>
