--- a/pages/gallery-dqlab.html
+++ b/pages/gallery-dqlab.html
@@ -65,9 +65,6 @@
   </header><!-- End Header -->
 
   <!-- Warning -->
-  <!-- <marquee scrolldelay="10">Contact me if the website doesn't run well, please! Thank you.</marquee> -->
-  <!-- <marquee behavior="alternate" onmouseover="this.stop()" onmouseout="this.start()" direction="right">Ini Tulisan Berjalan</marquee> -->
-    
  
     <!-- Galery  -->
     <section id="gallery" class="portfolio section-bg">
@@ -538,8 +535,7 @@
             </div>
           </div>
 
-          <!-- Excel -->          
-          <div class="col-lg-3 col-md-6 portfolio-item filter-excel">
+          <!-- Excel -->               <div class="col-lg-3 col-md-6 portfolio-item filter-excel">
             <div class="portfolio-wrap">
               <img src="../assets/img/certif_licen/dqlab/exc-1.png" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -549,8 +545,7 @@
               </div>
             </div>
           </div>
-                  
-          </div>
+                       </div>
         </div>
       </div>
     </section><!-- End Portfolio Section -->
