--- a/index.html
+++ b/index.html
@@ -991,7 +991,7 @@
               <div class="portfolio-info">
                 <h4> Study Program Recommendation System</h4>
                 <div class="portfolio-links">
-                  <a href="pages/web-system-recommendation.html" class="portfolio-details-lightbox"
+                  <a href="pages/project-web-system-recommendation.html" class="portfolio-details-lightbox"
                     data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -1004,7 +1004,7 @@
               <div class="portfolio-info">
                 <h4>SIM Training & Consultant</h4>
                 <div class="portfolio-links">
-                  <a href="pages/web-practical-work.html" class="portfolio-details-lightbox"
+                  <a href="pages/project-web-practical-work.html" class="portfolio-details-lightbox"
                     data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -1165,6 +1165,35 @@
 
         <div class="row galery-container" data-aos="fade-up" data-aos-delay="200">
 
+          
+          <div id="coursera" class="col-lg-3 col-md-6 galery-item filter-data">
+            <div class="portfolio-wrap">
+              <img src="assets/img/certif_licen/coursera/gbi/Google Business Intelligence.png"
+                class="img-fluid img-responsive thumb" alt="">
+              <div class="portfolio-info">
+                <h4>Google Business Intelligence</h4>
+                <div class="portfolio-links">
+                  <a href="pages/gallery-coursera-gbi.html" class="portfolio-details-lightbox"
+                    data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>    
+
+          <!-- <div id="coursera" class="col-lg-3 col-md-6 galery-item filter-data">
+            <div class="portfolio-wrap">
+              <img src="assets/img/certif_licen/coursera/gada/Google Advance Data Analytics.png"
+                class="img-fluid img-responsive thumb" alt="">
+              <div class="portfolio-info">
+                <h4>Google Advance Data Analytics</h4>
+                <div class="portfolio-links">
+                  <a href="pages/gallery-coursera-gda.html" class="portfolio-details-lightbox"
+                    data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>     -->
+
           <div id="coursera" class="col-lg-3 col-md-6 galery-item filter-data">
             <div class="portfolio-wrap">
               <img src="assets/img/certif_licen/coursera/gda/Google Data Analytics.png"
@@ -1173,6 +1202,20 @@
                 <h4>Google Data Analytics</h4>
                 <div class="portfolio-links">
                   <a href="pages/gallery-coursera-gda.html" class="portfolio-details-lightbox"
+                    data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>        
+
+          <div id="coursera" class="col-lg-3 col-md-6 galery-item filter-aws-saa filter-cloud">
+            <div class="portfolio-wrap">
+              <img src="assets/img/certif_licen/coursera/aws-saa/AWS Cloud Solutions Architect.png"
+                class="img-fluid img-responsive thumb" alt="">
+              <div class="portfolio-info">
+                <h4>AWS Cloud Solutions Architect</h4>
+                <div class="portfolio-links">
+                  <a href="pages/gallery-coursera-aws-saa.html" class="portfolio-details-lightbox"
                     data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -1353,7 +1396,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/certif_licen/rhel/rhel.png" class="img-fluid img-responsive thumb" alt="">
               <div class="portfolio-info">
-                <h4>Red Hat</h4>
+                <h4></h4>
                 <div class="portfolio-links">
                   <a href="pages/gallery-rhel.html" class="portfolio-details-lightbox" data-glightbox="type: external"
                     title="Show Details"><i class="bx bx-link"></i></a>
@@ -1366,9 +1409,9 @@
             <div class="portfolio-wrap">
               <img src="assets/img/certif_licen/prakerja.png" class="img-fluid img-responsive thumb" alt="">
               <div class="portfolio-info">
-                <h4>Kartu Prakerja</h4>
+                <h4></h4>
                 <div class="portfolio-links">
-                  <a href="pages/prakerja.html" class="portfolio-details-lightbox" data-glightbox="type: external"
+                  <a href="pages/gallery-prakerja.html" class="portfolio-details-lightbox" data-glightbox="type: external"
                     title="Show Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
