--- a/pages/gallery-coursera-ibm.html
+++ b/pages/gallery-coursera-ibm.html
@@ -16,17 +16,20 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Maulana Kavaldo - Google Certificates</title>
-  <meta content="Im Maulana Kavaldo, junior data scientist/analyst with more 2 years learning experience." name="description">
+  <title>Maulana Kavaldo - IBM Certificates</title>
+  <meta content="Im Maulana Kavaldo, junior data scientist/analyst with more 2 years learning experience."
+    name="description">
   <meta content="Maulana Kavaldo Google Project Management Certificates" name="keywords">
- <meta name="google-site-verification" content="SLhPwvXl2bw4QQGgEcSCxpZ04cM31-AURBADXqZps5Y" />
+  <meta name="google-site-verification" content="SLhPwvXl2bw4QQGgEcSCxpZ04cM31-AURBADXqZps5Y" />
 
   <!-- Favicons -->
   <link href="../assets/img/favicon.png" rel="icon">
   <link href="../assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
+    rel="stylesheet">
 
   <!-- ReChapta -->
   <script src="https://www.google.com/recaptcha/api.js" async defer></script>
@@ -44,11 +47,11 @@
 </head>
 
 <body>
-<!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KZN6K62"
-  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KZN6K62" height="0" width="0"
+      style="display:none;visibility:hidden"></iframe></noscript>
   <!-- End Google Tag Manager (noscript) -->
-  
+
 
   <!-- ======= Mobile nav toggle button ======= -->
   <!-- <button type="button" class="mobile-nav-toggle d-xl-none"><i class="bi bi-list mobile-nav-toggle"></i></button> -->
@@ -58,130 +61,138 @@
 
     <nav id="navbar" class="navbar nav-menu">
       <ul>
-        <li><a href="https://maulanakavaldo.github.io" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
+        <li><a href="https://maulanakavaldo.github.io" class="nav-link scrollto active"><i class="bx bx-home"></i>
+            <span>Home</span></a></li>
       </ul>
     </nav><!-- .nav-menu -->
 
   </header><!-- End Header -->
 
   <!-- Warning -->
-  <!-- <marquee scrolldelay="10">Contact me if the website doesn't run well, please! Thank you.</marquee> -->
-  <!-- <marquee behavior="alternate" onmouseover="this.stop()" onmouseout="this.start()" direction="right">Ini Tulisan Berjalan</marquee> -->
-    
- 
-    <!-- Galery  -->
-    <section id="gallery" class="portfolio section-bg">
-      <div class="container" data-aos="fade-up">
 
-        <div class="section-title">
-          <h2>IBM Project Manager</h2>
-          <!-- <p>Learning Path:</p> -->
-        </div>
+  <!-- Galery  -->
+  <section id="gallery" class="portfolio section-bg">
+    <div class="container" data-aos="fade-up">
 
-        <!-- <div class="row">
-          <div class="col-lg-12 d-flex justify-content-center" data-aos="fade-up" data-aos-delay="100">
-            <ul id="portfolio-flters">
-              <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-gpm">Google</li>
-            </ul>
-          </div>
-        </div> -->
-
-        <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
-
-          <div class="col-lg-3 col-md-6 portfolio-item filter-ibm">
-            <div class="portfolio-wrap">
-              <img src="../assets/img/certif_licen/coursera/ibm/IBM Project Manager.png" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <p>IBM Project Manager</p>
-                <div class="portfolio-links">
-                  <a href="../assets/img/certif_licen/coursera/ibm/IBM Project Manager.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-6 portfolio-item filter-ibm">
-            <div class="portfolio-wrap">
-              <img src="../assets/img/certif_licen/coursera/ibm/Introduction to Agile Development and Scrum_w honor.png" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <p>Introduction to Agile Development and Scrum</p>
-                <div class="portfolio-links">
-                  <a href="../assets/img/certif_licen/coursera/ibm/Introduction to Agile Development and Scrum_w honor.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-6 portfolio-item filter-ibm">
-            <div class="portfolio-wrap">
-              <img src="../assets/img/certif_licen/coursera/ibm/Introduction to Project Management.png" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <p>Introduction to Project Management</p>
-                <div class="portfolio-links">
-                  <a href="../assets/img/certif_licen/coursera/ibm/Introduction to Project Management.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-6 portfolio-item filter-ibm">
-            <div class="portfolio-wrap">
-              <img src="../assets/img/certif_licen/coursera/ibm/Project Lifecycle, Information Sharing, and Risk.png" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <p>Project Lifecycle, Information Sharing, and Risk</p>
-                <div class="portfolio-links">
-                  <a href="../assets/img/certif_licen/coursera/ibm/Project Lifecycle, Information Sharing, and Risk.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-6 portfolio-item filter-ibm">
-            <div class="portfolio-wrap">
-              <img src="../assets/img/certif_licen/coursera/ibm/Project Management Foundations, Initiation, and Planning.png" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <p>Project Management Foundations, Initiation, and Planning</p>
-                <div class="portfolio-links">
-                  <a href="../assets/img/certif_licen/coursera/ibm/Project Management Foundations, Initiation, and Planning.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-6 portfolio-item filter-ibm">
-            <div class="portfolio-wrap">
-              <img src="../assets/img/certif_licen/coursera/ibm/Project Management Communication, Stakeholders & Leadership.png" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <p>Project Management Communication, Stakeholders & Leadership</p>
-                <div class="portfolio-links">
-                  <a href="../assets/img/certif_licen/coursera/ibm/Project Management Communication, Stakeholders & Leadership.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-6 portfolio-item filter-ibm">
-            <div class="portfolio-wrap">
-              <img src="../assets/img/certif_licen/coursera/ibm/Project Management Capstone.png" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <p>Project Management Capstone</p>
-                <div class="portfolio-links">
-                  <a href="../assets/img/certif_licen/coursera/ibm/Project Management Capstone.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-                  
-          </div>
-        </div>
+      <div class="section-title">
+        <h2>
+          <a href="https://coursera.org/verify/professional-cert/Y7F2Z4MH7W2G" target="_blank">
+            IBM Project Manager
+          </a>
+        </h2>
       </div>
-    </section><!-- End Portfolio Section -->
+
+      <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
+
+        <div class="col-lg-3 col-md-6 portfolio-item filter-ibm">
+          <div class="portfolio-wrap">
+            <img src="../assets/img/certif_licen/coursera/ibm/IBM Project Manager.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <p>IBM Project Manager</p>
+              <div class="portfolio-links">
+                <a href="../assets/img/certif_licen/coursera/ibm/IBM Project Manager.png"
+                  data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-md-6 portfolio-item filter-ibm">
+          <div class="portfolio-wrap">
+            <img src="../assets/img/certif_licen/coursera/ibm/Introduction to Agile Development and Scrum_w honor.png"
+              class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <p>Introduction to Agile Development and Scrum</p>
+              <div class="portfolio-links">
+                <a href="../assets/img/certif_licen/coursera/ibm/Introduction to Agile Development and Scrum_w honor.png"
+                  data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-md-6 portfolio-item filter-ibm">
+          <div class="portfolio-wrap">
+            <img src="../assets/img/certif_licen/coursera/ibm/Introduction to Project Management.png" class="img-fluid"
+              alt="">
+            <div class="portfolio-info">
+              <p>Introduction to Project Management</p>
+              <div class="portfolio-links">
+                <a href="../assets/img/certif_licen/coursera/ibm/Introduction to Project Management.png"
+                  data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-md-6 portfolio-item filter-ibm">
+          <div class="portfolio-wrap">
+            <img src="../assets/img/certif_licen/coursera/ibm/Project Lifecycle, Information Sharing, and Risk.png"
+              class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <p>Project Lifecycle, Information Sharing, and Risk</p>
+              <div class="portfolio-links">
+                <a href="../assets/img/certif_licen/coursera/ibm/Project Lifecycle, Information Sharing, and Risk.png"
+                  data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-md-6 portfolio-item filter-ibm">
+          <div class="portfolio-wrap">
+            <img
+              src="../assets/img/certif_licen/coursera/ibm/Project Management Foundations, Initiation, and Planning.png"
+              class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <p>Project Management Foundations, Initiation, and Planning</p>
+              <div class="portfolio-links">
+                <a href="../assets/img/certif_licen/coursera/ibm/Project Management Foundations, Initiation, and Planning.png"
+                  data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-md-6 portfolio-item filter-ibm">
+          <div class="portfolio-wrap">
+            <img
+              src="../assets/img/certif_licen/coursera/ibm/Project Management Communication, Stakeholders & Leadership.png"
+              class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <p>Project Management Communication, Stakeholders & Leadership</p>
+              <div class="portfolio-links">
+                <a href="../assets/img/certif_licen/coursera/ibm/Project Management Communication, Stakeholders & Leadership.png"
+                  data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-3 col-md-6 portfolio-item filter-ibm">
+          <div class="portfolio-wrap">
+            <img src="../assets/img/certif_licen/coursera/ibm/Project Management Capstone.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <p>Project Management Capstone</p>
+              <div class="portfolio-links">
+                <a href="../assets/img/certif_licen/coursera/ibm/Project Management Capstone.png"
+                  data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </div>
+    </div>
+  </section>
+  <!-- End Portfolio Section -->
 
   </main>
-  <!-- End #main --> 
+  <!-- End #main -->
 
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
+      class="bi bi-arrow-up-short"></i></a>
 
   <!-- Vendor JS Files -->
   <script src="../assets/vendor/purecounter/purecounter_vanilla.js"></script>
@@ -191,7 +202,7 @@
   <script src="../assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
   <script src="../assets/vendor/swiper/swiper-bundle.min.js"></script>
   <script src="../assets/vendor/typed.js/typed.min.js"></script>
-  <script src="../assets/vendor/waypoints/noframework.waypoints.js"></script> 
+  <script src="../assets/vendor/waypoints/noframework.waypoints.js"></script>
 
   <!-- Template Main JS File -->
   <script src="../assets/js/main.js"></script>
