--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <title>Maulana Kavaldo</title>
   <meta content="Im Maulana Kavaldo, junior data scientist/analyst with more 2 years learning experience."
     name="description">
-  <meta content="maulana kavaldo portfolio thk future knowledge g20 bali" name="keywords">
+  <meta content="maulana kavaldo portfolio data science" name="keywords">
   <meta name="google-site-verification" content="SLhPwvXl2bw4QQGgEcSCxpZ04cM31-AURBADXqZps5Y" />
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -1180,19 +1180,19 @@
             </div>
           </div>    
 
-          <!-- <div id="coursera" class="col-lg-3 col-md-6 galery-item filter-data">
+          <div id="coursera" class="col-lg-3 col-md-6 galery-item filter-data">
             <div class="portfolio-wrap">
-              <img src="assets/img/certif_licen/coursera/gada/Google Advance Data Analytics.png"
+              <img src="assets/img/certif_licen/coursera/gada/Google Advanced Data Analytics.png"
                 class="img-fluid img-responsive thumb" alt="">
               <div class="portfolio-info">
                 <h4>Google Advance Data Analytics</h4>
                 <div class="portfolio-links">
-                  <a href="pages/gallery-coursera-gda.html" class="portfolio-details-lightbox"
+                  <a href="pages/gallery-coursera-gada.html" class="portfolio-details-lightbox"
                     data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
-          </div>     -->
+          </div>    
 
           <div id="coursera" class="col-lg-3 col-md-6 galery-item filter-data">
             <div class="portfolio-wrap">
