--- a/pages/gallery-coursera-gada.html
+++ b/pages/gallery-coursera-gada.html
@@ -75,7 +75,7 @@
 
       <div class="section-title">
         <h2>
-          <a href="" target="_blank">
+          <a href="https://coursera.org/verify/professional-cert/QA372DLGMPFX" target="_blank">
             Google Advanced Data Analytics
           </a>
         </h2>
@@ -83,6 +83,19 @@
 
       <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
 
+        <div class="col-lg-3 col-md-6 portfolio-item filter-gada">
+          <div class="portfolio-wrap">
+            <img src="../assets/img/certif_licen/coursera/gada/Google Advanced Data Analytics.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <p></p>
+              <div class="portfolio-links">
+                <a href="../assets/img/certif_licen/coursera/gada/Google Advanced Data Analytics.png" data-gallery="portfolioGallery"
+                  class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+        
         <div class="col-lg-3 col-md-6 portfolio-item filter-gada">
           <div class="portfolio-wrap">
             <img src="../assets/img/certif_licen/coursera/gada/1 Foundations of Data Science.png" class="img-fluid"
@@ -110,13 +123,13 @@
           </div>
         </div>
 
-        <!-- <div class="col-lg-3 col-md-6 portfolio-item filter-gada">
+        <div class="col-lg-3 col-md-6 portfolio-item filter-gada">
           <div class="portfolio-wrap">
-            <img src="../assets/img/certif_licen/coursera/gda/2 Ask Questions to Make Data-Driven Decisions.png" class="img-fluid" alt="">
+            <img src="../assets/img/certif_licen/coursera/gada/3 Go Beyond the Numbers Translate Data into Insight.png" class="img-fluid" alt="">
             <div class="portfolio-info">
               <p>Ask Questions to Make Data-Driven Decisions</p>
               <div class="portfolio-links">
-                <a href="../assets/img/certif_licen/coursera/gda/2 Ask Questions to Make Data-Driven Decisions.png" data-gallery="portfolioGallery"
+                <a href="../assets/img/certif_licen/coursera/gada/3 Go Beyond the Numbers Translate Data into Insight.png" data-gallery="portfolioGallery"
                   class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
               </div>
             </div>
@@ -125,11 +138,11 @@
 
         <div class="col-lg-3 col-md-6 portfolio-item filter-gada">
           <div class="portfolio-wrap">
-            <img src="../assets/img/certif_licen/coursera/gda/3 Prepare Data for Exploration.png" class="img-fluid" alt="">
+            <img src="../assets/img/certif_licen/coursera/gada/4 The Power of Statistics.png" class="img-fluid" alt="">
             <div class="portfolio-info">
               <p>Prepare Data for Exploration</p>
               <div class="portfolio-links">
-                <a href="../assets/img/certif_licen/coursera/gda/3 Prepare Data for Exploration.png" data-gallery="portfolioGallery"
+                <a href="../assets/img/certif_licen/coursera/gada/4 The Power of Statistics.png" data-gallery="portfolioGallery"
                   class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
               </div>
             </div>
@@ -138,11 +151,11 @@
 
         <div class="col-lg-3 col-md-6 portfolio-item filter-gada">
           <div class="portfolio-wrap">
-            <img src="../assets/img/certif_licen/coursera/gda/4 Process Data from Dirty to Clean.png" class="img-fluid" alt="">
+            <img src="../assets/img/certif_licen/coursera/gada/5 Regression Analysis Simplify Complex Data Relationships.png" class="img-fluid" alt="">
             <div class="portfolio-info">
               <p>Process Data from Dirty to Clean</p>
               <div class="portfolio-links">
-                <a href="../assets/img/certif_licen/coursera/gda/4 Process Data from Dirty to Clean.png" data-gallery="portfolioGallery"
+                <a href="../assets/img/certif_licen/coursera/gada/5 Regression Analysis Simplify Complex Data Relationships.png" data-gallery="portfolioGallery"
                   class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
               </div>
             </div>
@@ -151,11 +164,11 @@
 
         <div class="col-lg-3 col-md-6 portfolio-item filter-gada">
           <div class="portfolio-wrap">
-            <img src="../assets/img/certif_licen/coursera/gda/5 Analyze Data to Answer Questions.png" class="img-fluid" alt="">
+            <img src="../assets/img/certif_licen/coursera/gada/6 The Nuts and Bolts of Machine Learning.png" class="img-fluid" alt="">
             <div class="portfolio-info">
               <p>Analyze Data to Answer Questions</p>
               <div class="portfolio-links">
-                <a href="../assets/img/certif_licen/coursera/gda/5 Analyze Data to Answer Questions.png" data-gallery="portfolioGallery"
+                <a href="../assets/img/certif_licen/coursera/gada/6 The Nuts and Bolts of Machine Learning.png" data-gallery="portfolioGallery"
                   class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
               </div>
             </div>
@@ -164,29 +177,16 @@
 
         <div class="col-lg-3 col-md-6 portfolio-item filter-gada">
           <div class="portfolio-wrap">
-            <img src="../assets/img/certif_licen/coursera/gda/6 Share Data Through the Art of Visualization.png" class="img-fluid" alt="">
+            <img src="../assets/img/certif_licen/coursera/gada/7 Google Advanced Data Analytics Capstone.png" class="img-fluid" alt="">
             <div class="portfolio-info">
               <p>Share Data Through the Art of Visualization</p>
               <div class="portfolio-links">
-                <a href="../assets/img/certif_licen/coursera/gda/6 Share Data Through the Art of Visualization.png" data-gallery="portfolioGallery"
+                <a href="../assets/img/certif_licen/coursera/gada/7 Google Advanced Data Analytics Capstone.png" data-gallery="portfolioGallery"
                   class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
               </div>
             </div>
           </div>
-        </div>
-
-        <div class="col-lg-3 col-md-6 portfolio-item filter-gada">
-          <div class="portfolio-wrap">
-            <img src="../assets/img/certif_licen/coursera/gda/7 Data Analysis with R Programming.png" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <p></p>
-              <div class="portfolio-links">
-                <a href="../assets/img/certif_licen/coursera/gda/7 Data Analysis with R Programming.png" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
-              </div>
-            </div>
-          </div>
-        </div> -->
+        </div>        
 
       </div>
     </div>
