--- a/index.html
+++ b/index.html
@@ -756,7 +756,7 @@
             </div>
           </div> -->
 
-          <div class="col-lg-3 col-md-6 portfolio-item filter-data">
+          <div class="col-lg-3 col-md-6 portfolio-item filter-vix filter-data">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/project-vix/vix-kalbe.png" class="img-fluid" alt="">
               <div class=" portfolio-info">
