--- a/index.html
+++ b/index.html
@@ -1825,22 +1825,28 @@
 
           <script>
             document.addEventListener("DOMContentLoaded", function () {
-              const emailInput = document.getElementById("email");
-              const messageInput = document.getElementById("message");
-              const submitButton = document.getElementById("submitButton");
-
-              emailInput.addEventListener("input", validateForm);
-              messageInput.addEventListener("input", validateForm);
-
-              function validateForm() {
-                if (emailInput.value.trim() !== "" && messageInput.value.trim() !== "") {
-                  submitButton.disabled = false;
-                } else {
-                  submitButton.disabled = true;
+                const emailInput = document.getElementById("email");
+                const messageInput = document.getElementById("message");
+                const submitButton = document.getElementById("submitButton");
+    
+                emailInput.addEventListener("input", validateForm);
+                messageInput.addEventListener("input", validateForm);
+    
+                function validateForm() {
+                    if (emailInput.value.trim() !== "" && messageInput.value.trim() !== "") {
+                        // Verifikasi reCAPTCHA
+                        const recaptchaResponse = grecaptcha.getResponse();
+                        if (recaptchaResponse !== "") {
+                            submitButton.disabled = false;
+                        } else {
+                            submitButton.disabled = true;
+                        }
+                    } else {
+                        submitButton.disabled = true;
+                    }
                 }
-              }
             });
-          </script>
+        </script>
 
 
         </div>
